# sub2md

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
sub2md/: Cache.py  Generator.py  Scraper.py  __init__.py  __main__.py
sub2md/utils/: Config.py  Exceptions.py  Logger.py
tests/: test_scraper.py
