[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sub2md"
version = "1.0.0"
description = "A tool to scrape Substack posts and convert them to Markdown"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Haron", email = "sub2md@haron.dev"}
]
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "orjson",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy"
]

[project.scripts]
sub2md = "sub2md.__main__:main"

[tool.setuptools]
packages = ["sub2md"] 